--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -9,8 +9,8 @@ Home
   <h2 class="text-center mb-2">Parking Lots</h2>
   <hr style="height: 3px; background-color: #007bff;">
 
-  <!-- Wrap lots horizontally -->
   <div class="d-flex flex-wrap gap-4 justify-content-start">
+
     {% for lot in lots %}
     <div class="parking-lot-card p-3 shadow rounded">
       <h5 class="fw-bold">Parking Lot #{{ lot.lot.lot_id }}</h5>
@@ -19,33 +19,36 @@ Home
         <a href="/admin_delete_lot/{{ lot.lot.lot_id }}" class="text-danger text-decoration-none">Delete</a>
       </div>
       <p class="text-success fw-bold" style="margin-bottom:5px" >Occupied: {{ lot.occupied_spots }} / {{ lot.total_spots }}</p>
-<hr style="margin:0; background-color: #007bff;width: 100%; border:1px solid black;">
+      <hr style="margin:0; background-color: #007bff;width: 100%; border:1px solid black;">
+
       <div class="spot-grid">
         {% if lot.spots %}
-          {% for spot in lot.spots %}
-            {% if spot.status == 'available' %}
-              <div class="spot available">
-                <a href="/admin_view_spots/{{ lot.lot.lot_id }}/{{ spot.spot_id }}" class="text-decoration-none text-dark">A</a>
-              </div>
-            {% else %}
-              <div class="spot occupied">
-                <a href="/admin_view_spots/{{ lot.lot.lot_id }}/{{ spot.spot_id }}" class="text-decoration-none text-dark">O</a>
-              </div>
-            {% endif %}
-          {% endfor %}
+        {% for spot in lot.spots %}
+        {% if spot.status == 'available' %}
+        <div class="spot available">
+          <a href="/admin_view_spots/{{ lot.lot.lot_id }}/{{ spot.spot_id }}" class="text-decoration-none text-dark">A</a>
+        </div>
+
         {% else %}
-          <p class="text-muted">No spots available</p>
+        <div class="spot occupied">
+          <a href="/admin_view_spots/{{ lot.lot.lot_id }}/{{ spot.spot_id }}" class="text-decoration-none text-dark">O</a>
+        </div>
+        {% endif %}
+        {% endfor %}
+
+        {% else %}
+        <p class="text-muted">No spots available</p>
         {% endif %}
       </div>
     </div>
     {% endfor %}
   </div>
   {% else %}
-    <div class="container mt-4">
-        <h2 class="text-center mb-2">No Parking Lots Available</h2>
-        <hr style=" height: 3px; background-color: #007bff;">
-        <p class="text-center">Please add a parking lot to get started.</p>
-    </div>
+  <div class="container mt-4">
+    <h2 class="text-center mb-2">No Parking Lots Available</h2>
+    <hr style=" height: 3px; background-color: #007bff;">
+    <p class="text-center">Please add a parking lot to get started.</p>
+  </div>
 {%endif%}
 
   <div class="text-center mt-4">
@@ -58,18 +61,18 @@ Home
 
 {% block style %}
 <style>
-    body {
-        background-color: #F5F5F5;
-    }
-    h1 {
-        margin-top: 64px;
-        text-align: center;
-    }
+body {
+  background-color: #F5F5F5;
+}
+h1 {
+  margin-top: 64px;
+  text-align: center;
+}
 
 
 .parking-lot-card {
   width: 280px;
-  background-color: #fdf6ec;
+  background-color:rgb(240, 224, 203);
   border: 2px solid #ddd;
   border-radius: 10px;
   transition: all 0.3s ease-in-out;
