--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@ Home
         <h3 class="fs-2 text-body-emphasis">Personalized Usage Summary</h3>
         <p>Monitor your usage through detailed stats like active bookings, past transactions, and total cost — all in one dashboard.</p>
         <a href="/user_summary" class="btn btn-primary">
-          Primary button
+          Summary
         </a>
       </div>
     </div>
