--- a/templates/login.html
+++ b/templates/login.html
@@ -6,23 +6,26 @@ Login - SmartLot
 
 {% block content %}
 <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;width: 100%;width: 100vw;display: flex;justify-content: center;align-items: center;">
-  <div class="card p-4" style="width: 100%; max-width: 400px;border-radius: 10px;">
-<h1>Login</h1>
-<form method="post" class="mt-3">
-    <div class="mb-3">
-    <label for="username" class="form-label">Username:
-        <input type="text" name="username" id="username" class="form-control" required />
-    </label>
-    </div>
-    <div class="mb-3">
-    <label for="password" class="form-label">Password:
-        <input type="password" name="password" id="password" class="form-control" required />
-    </label>
-    </div>
-    <div class="my-3">
-    <input type="submit" value="Login" class="btn btn-success">
-    </div>
-</form>
+    <div class="card p-4" style="width: 100%; max-width: 400px;border-radius: 10px;">
+        <h1>Login</h1>
+        <form method="post" class="mt-3">
+
+            <div class="mb-3">
+                <label for="username" class="form-label">Username:
+                    <input type="text" name="username" id="username" class="form-control" required />
+                </label>
+            </div>
+
+            <div class="mb-3">
+                <label for="password" class="form-label">Password:
+                    <input type="password" name="password" id="password" class="form-control" required />
+                </label>
+            </div>
+        
+            <div class="my-3">
+                <input type="submit" value="Login" class="btn btn-success">
+            </div>
+        </form>
   </div>
 </div>
 {% endblock %}
@@ -30,12 +33,17 @@ Login - SmartLot
 {% block style %}
 <style>
     .container {
-        background-color: #4DA8DA;
+        background-image: url('/static/registerr.jpeg');
+        background-size: cover;
+        background-position: center;
         border-radius: 10px;
     }
         
     .card {
-        background-color: #FFD66B;
+        background: rgba(255, 255, 255, 0.5);
+        backdrop-filter: blur(2px);
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0.2);
     }
     form {
         display: flex;
