--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -5,54 +5,66 @@ Profile Update
 {% endblock %}
 
 {% block content %}
-<div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;width: 100%;width: 100vw;display: flex;justify-content: center;align-items: center;">
-  <div class="card p-4" style="width: 100%; max-width: 400px;border-radius: 10px;">
-<h1>Update Profile</h1>
-<form method="post" class="mt-3 custom">
-    <div class="mb-3">
-    <label for="username" class="form-label">New Username:
-        <input type="text" name="username" id="username" class="form-control" required />
-    </label>
-    </div>
-    <div class="mb-3">
-    <label for="new_email" class="form-label">New Email:
-        <input type="email" name="new_email" id="new_email" class="form-control" required />
-    </label>
-    </div>
-    <div class="mb-3">
-    <label for="current_password" class="form-label">Current Password:
-        <input type="password" name="current_password" id="current_password" class="form-control" required />
-    </label>
-    </div>
-    <div class="mb-3">
-    <label for="new_password" class="form-label">New Password:
-        <input type="password" name="new_password" id="new_password" class="form-control" required />
-    </label>
-    </div>
-    <div class="my-3">
-    <input type="submit" value="Update" class="btn btn-success">
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 110vh;width: 100%;width: 100vw;display: flex;justify-content: center;align-items: center;">
+    <div class="card p-4" style="width: 100%;max-height:600px;max-width: 400px;border-radius: 10px;">
+        <h1>Update Profile</h1>
+        <form method="post" class="mt-3 custom">
+            <div class="mb-3">
+                <label for="username" class="form-label">New Username:
+                    <input type="text" name="username" id="username" class="form-control" required />
+                </label>
+            </div>
     
+            <div class="mb-3">
+                <label for="new_email" class="form-label">New Email:
+                    <input type="email" name="new_email" id="new_email" class="form-control" required />
+                </label>
+            </div>
+    
+            <div class="mb-3">
+                <label for="p_no" class="form-label">New Phone Number:
+                    <input type="p_no" name="p_no" id="p_no" class="form-control" required />
+                </label>
+            </div>
+    
+            <div class="mb-3">
+                <label for="current_password" class="form-label">Current Password:
+                    <input type="password" name="current_password" id="current_password" class="form-control" required />
+                </label>
+            </div>
+        
+            <div class="mb-3">
+                <label for="new_password" class="form-label">New Password:
+                    <input type="password" name="new_password" id="new_password" class="form-control" required />
+                </label>
+            </div>
+    
+            <div class="mb-3">
+                <input type="submit" value="Update" class="btn btn-success">
+            </div>
+        </form>
     </div>
-</form>
-  </div>
 </div>
 {% endblock %}
 
 {% block style %}
 <style>
     .container {
-        background-color: #4DA8DA;
+        background-image: url('/static/edit.jpeg');
+        background-size: cover;
+        background-position: center;
         border-radius: 10px;
     }
         
     .card {
-        background-color: #FFD66B;
+        background: rgba(255, 255, 255, 0.5);
+        backdrop-filter: blur(2px);
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0.2);
     }
    .custom input{
-  width: 100%;
-  
-}
-
+        width: 100%;
+    }
     .custom {
         display: flex;
         flex-direction: column;
@@ -60,7 +72,7 @@ Profile Update
     }
 
     h1 {
-        margin-top: 20px;
+        margin-top: 10px;
         text-align: center;
     }
     
