--- a/templates/register.html
+++ b/templates/register.html
@@ -6,41 +6,74 @@ Register - SmartLot
 
 {% block content %}
 <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;width: 100%;width: 100vw;display: flex;justify-content: center;align-items: center;">
-  <div class="card p-4" style="width: 100%;height:100%;max-height: 500px; max-width: 400px;border-radius: 10px;">
-<h1>Register</h1>
-<form method="post" class="mt-2">
-    <div class="mb-3">
-    <label for="username" class="form-label">Username:
-        <input type="text" name="username" id="username" class="form-control" required />
-    </label>
+    <div class="card p-4" style="width: 100%;height:100%;max-height: 600px; max-width: 400px;border-radius: 10px;">
+        <h1>Register</h1>
+
+        <form method="post" class="mt-2">
+            <div class="row mb-3">
+                <label for="username" class="col-sm-4 col-form-label text-end">Username:</label>
+                <div class="col-sm-7">
+                    <input type="text" name="username" id="username" class="form-control" required />
+                </div>
+            </div>
+    
+            <div class="row mb-3">
+                <label for="email" class="col-sm-4 col-form-label text-end">Email:</label>
+                <div class="col-sm-7">
+                    <input type="email" name="email" id="email" class="form-control" required />
+                </div>
+            </div>
+            
+            <div class="row mb-3">
+                <label for="password" class="col-sm-4 col-form-label text-end">Password:</label>
+                <div class="col-sm-7">
+                    <input type="password" name="password" id="password" class="form-control" required />
+                </div>
+            </div>
+    
+            <div class="row mb-3">
+                <label for="address" class="col-sm-4 col-form-label text-end">Address:</label>
+                <div class="col-sm-7">
+                    <input type="text" name="address" id="address" class="form-control" required />
+                </div>
+            </div>
+            
+            <div class="row mb-3">
+                <label for="pincode" class="col-sm-4 col-form-label text-end">Pincode:</label>
+                <div class="col-sm-7">
+                    <input type="number" name="pincode" id="pincode" class="form-control" required />
+                </div>
+            </div>
+    
+            <div class="row mb-3">
+                <label for="ph_no" class="col-sm-4 col-form-label text-end">Phone Number:</label>
+                <div class="col-sm-7 mt-2">
+                    <input type="number" name="ph_no" id="ph_no" class="form-control" required />
+                </div>
+            </div>
+    
+            <div>
+                <input type="submit" value="Login" class="btn btn-success">
+            </div>
+        </form>
     </div>
-    <div class="mb-3">
-    <label for="email" class="form-label">Email:
-        <input type="email" name="email" id="email" class="form-control" required />
-    </label>
-    </div>
-    <div class="mb-3">
-    <label for="password" class="form-label">Password:
-        <input type="password" name="password" id="password" class="form-control" required />
-    </label>
-    </div>
-    <div class="my-3">
-    <input type="submit" value="Login" class="btn btn-success">
-    </div>
-</form>
-  </div>
 </div>
 {% endblock %}
 
 {% block style %}
 <style>
-    .container {
-        background-color: #4DA8DA;
+     .container {
+        background-image: url('/static/registerr.jpeg');
+        background-size: cover;
+        background-position: center;
         border-radius: 10px;
     }
         
     .card {
-        background-color: #FFD66B;
+        background: rgba(255, 255, 255, 0.5);
+        backdrop-filter: blur(2px);
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0.2);
     }
     form {
         display: flex;
